syntax = "proto3";

option java_package = "com.google.jetpackcamera.settings";
option java_multiple_files = true;

enum DarkModeProto {
  DARK_MODE_SYSTEM = 0;
  DARK_MODE_LIGHT= 1;
  DARK_MODE_DARK = 2;
}